    Internal exceptions (trough the BatReturn label) have been removed
    from the modules BatString, BatSubstring and BatVect.
  (Gabriel Scherer, request and review by Clément Pit-Claudel)

- added `BatVect.find_opt : ('a -> bool) -> 'a t -> 'a option`
  and BatVect.Make.find_opt
  #769
  (Gabriel Scherer)

- Documents exceptions for List.(min, max)
  #770
  (Varun Gandhi)

## v2.6.0 (minor release)

- added Bat{Set,Map,Splay}.any and fixed Bat{Map,Splay}.choose
  #751
  (Cedric Cellier)

- added BatList.favg and faster BatList.fsum
  #746
  (Gabriel Scherer, Francois Berenger)

- install .cmt and .cmti files
  #740
  (Francois Berenger, Gabriel Scherer)

- BatMap: added find_default
  #730
  (Francois Berenger)

- added scripts/test_install.sh
  #743
  (Francois Berenger)

- BatHashtbl: added {to|of}_list, bindings
  #728
  (Francois Berenger, Thibault Suzanne)

- added {BatList|BatArray}.shuffle
  #702, #707
  (Francois Berenger, Gabriel Scherer)

- Clarification and improvements to the documentation
  #682, #685, #693
  (Florian Angeletti, Johannes Kloos, Michael Färber)

- make `LazyList.split_at` lazy:
  `split_at : int -> 'a t -> 'a t * 'a t`
  would previously eagerly force the prefix of the list
  and only be lazy in its second returned value.
  #694
  (Michael Färber, Gabriel Scherer, Thibault Suzanne)

- Add `List.{map2i,iter2i}`
  #696
  (Thibault Suzanne)

- Added `Result.{map,map_both}`
  #705
  (Ifaz Kabir)

- Add {BatSet,BatMap}.{Int,Int32,Int64,Nativeint,Float,Char,String} as
  common instantions of the respective `Make` functor.
  #709, #712
  (Thibault Suzanne, François Bérenger)

- BatString: add `chop : ?l:int -> ?r:int -> string -> string`
  #714, #716
  (Gabriel Scherer, request by François Bérenger)

- BatSet: make `to_array` allocate the resulting array at first
  instead of using Dynarray (faster, uses less memory).
  #724
  (Thibault Suzanne)

- BatList: add `fold_left_map : ('a -> 'b -> 'a * 'c) -> 'a -> 'b list -> 'a * 'c list`
  #734